# mongodb

./: README.md
bazel/remote_execution_container/rhel89/: dockerfile
buildscripts/resmokeconfig/matrix_suites/: OWNERS.yml
buildscripts/resmokeconfig/matrix_suites/mappings/: OWNERS.yml
buildscripts/resmokeconfig/matrix_suites/overrides/: OWNERS.yml
jstests/core/administrative/profile/: profile_query_hash.js
jstests/noPassthrough/: log_and_profile_query_hash.js
jstests/noPassthrough/observability/libs/: otel_file_export_helpers.js
jstests/sharding/: safe_secondary_reads_drop_recreate.js  safe_secondary_reads_single_migration_suspend_range_deletion.js  safe_secondary_reads_single_migration_waitForDelete.js
src/mongo/db/: BUILD.bazel  locker_api.h  mongod_main.cpp  replica_set_endpoint_sharding_state.cpp  replica_set_endpoint_sharding_state.h  server_options_server_helpers.cpp
src/mongo/db/commands/: BUILD.bazel
src/mongo/db/exec/sbe/: sbe_hash_lookup_test.cpp
src/mongo/db/extension/host/: document_source_extension_optimizable.h
src/mongo/db/index_builds/: BUILD.bazel
src/mongo/db/local_catalog/shard_role_catalog/: collection_sharding_state_factory_shard.cpp
src/mongo/db/matcher/: expression_hasher.h
src/mongo/db/pipeline/: search_helper.cpp
src/mongo/db/pipeline/visitors/: docs_needed_bounds.h
src/mongo/db/query/: engine_selection.h  shape_helpers.h
src/mongo/db/query/query_shape/: BUILD.bazel
src/mongo/embedded/: session_manager_embedded.h
src/mongo/util/concurrency/: admission_context.cpp
(+3 files in other folders)
