load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "query_shape_hash_gen",
    src = "query_shape_hash.idl",
    deps = [
        "//src/mongo/crypto:sha256_block_gen",
    ],
)
